--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@justinribeiro/lite-youtube": "^1.9.0",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
+    "@supabase/supabase-js": "^2.86.2",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
